Convert EventDTO