@@ -1,42 +1,38 @@
 package com.itschool.eventmanagment.services;
+
 import com.itschool.eventmanagment.exceptions.EventNotFoundException;
-import com.itschool.eventmanagment.models.dtos.ParticipantDetailsDTO;
 import com.itschool.eventmanagment.models.dtos.EventDTO;
+import com.itschool.eventmanagment.models.dtos.ParticipantDetailsDTO;
 import com.itschool.eventmanagment.models.entities.Event;
 import com.itschool.eventmanagment.models.entities.Participant;
-import com.itschool.eventmanagment.repositories.EventRepository;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.itschool.eventmanagment.models.entities.User;
+import com.itschool.eventmanagment.repositories.EventRepository;
 import com.itschool.eventmanagment.repositories.UserRepository;
 import org.springframework.stereotype.Service;
-import java.util.*;
+
 import java.time.LocalDateTime;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Service
 public class EventServiceImp implements EventService {
 
 
     private final UserRepository userRepository;
-    private final ObjectMapper objectMapper;
     private final EventRepository eventRepository;
 
 
-    public EventServiceImp(UserRepository userRepository, ObjectMapper objectMapper, EventRepository eventRepository) {
+    public EventServiceImp(UserRepository userRepository, EventRepository eventRepository) {
         this.userRepository = userRepository;
-        this.objectMapper = objectMapper;
         this.eventRepository = eventRepository;
     }
 
     @Override
     public EventDTO createEvent(EventDTO eventDTO) {
         User user = userRepository.findById(eventDTO.getUserId()).orElseThrow(() -> new RuntimeException("User with id " + eventDTO.getUserId() + "not found"));
-        Event eventEntityToBeSaved = objectMapper.convertValue(eventDTO, Event.class);
+        Event eventEntityToBeSaved = mapEventDtoToEvent(eventDTO);
         eventEntityToBeSaved.setUser(user);
         Event eventResponseEntity = eventRepository.save(eventEntityToBeSaved);
-        EventDTO returnDTO = objectMapper.convertValue(eventResponseEntity, EventDTO.class);
-        returnDTO.setUserId(eventResponseEntity.getUser().getId());
-        return returnDTO;
+        return mapEventToEventDto(eventResponseEntity);
     }
 
     @Override
@@ -63,7 +59,28 @@ public class EventServiceImp implements EventService {
         } else {
             events = eventRepository.findByEventDateTimeBetweenAndLocationContainingIgnoreCaseOrderByEventDateTime(to, from, location);
         }
-        return events.stream().map(event -> objectMapper.convertValue(event, EventDTO.class)).collect(Collectors.toList());
+        return events.stream().map(EventServiceImp::mapEventToEventDto).toList();
+    }
+
+    private static EventDTO mapEventToEventDto(Event event) {
+        EventDTO eventDTO = new EventDTO();
+        eventDTO.setId(event.getId());
+        eventDTO.setEventDateTime(event.getEventDateTime());
+        eventDTO.setName(event.getName());
+        eventDTO.setLocation(event.getLocation());
+        eventDTO.setUserId(event.getUser().getId());
+        eventDTO.setMaxParticipants(event.getMaxParticipants());
+        return eventDTO;
+    }
+
+    private static Event mapEventDtoToEvent(EventDTO eventDTO) {
+        Event event = new Event();
+        event.setId(eventDTO.getId());
+        event.setEventDateTime(eventDTO.getEventDateTime());
+        event.setName(eventDTO.getName());
+        event.setLocation(eventDTO.getLocation());
+        event.setMaxParticipants(eventDTO.getMaxParticipants());
+        return event;
     }
 
     @Override
